# bookie_clicker

./: .gitignore  Cargo.toml  bun.lockb  index.html  lib.json  package.json  readme.md  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
back/: Cargo.toml  config.json  shelf.json  test.md  test_shelf.json
back/data/: shelf.json  test_shelf.json
back/src/: cli.rs  config.rs  database.rs  gui.rs  lib.rs  main.rs  search_book.rs
back/src/cli/: config.rs
cli/: Cargo.toml
cli/src/: main.rs
docs/: post.ps1  sekkei.md
front/: README.md  bun.lockb  index.html  package.json  test.md  tsconfig.json  vite.config.ts
front/public/: index.html
front/src/: App.tsx  index.tsx
front/src/components/: Analytics.tsx  Booklist.tsx  Graph.tsx  InputBookData.tsx  Register.tsx  Search.tsx  Statistics.tsx  Test.tsx
gui/: package.json
gui/.bookie_clicker/: config.json
gui/src/: App.tsx
gui/src-tauri/: Cargo.toml  lib.json  tauri.conf.json
gui/src-tauri/src/: gui.rs  lib.rs  main.rs
gui/src/components/: Analytics.tsx  Bookdata.tsx  Booklist.tsx  Graph.tsx  InputBookData.tsx  Register.tsx  Search.tsx  ShowBookData.tsx  Statistics.tsx
src/: App.css  App.tsx  main.tsx  pageContextHook.tsx  styles.css  styles.ts  type.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: bookshelf.rs  config.rs  data_struct.rs  database.rs  gui.rs  lib.rs  library.rs  main.rs  ndlsearch.rs  sruapi.rs  test.rs
src/@types/: index.d.ts
src/components/: Analytics.tsx  BookCard.tsx  BookList.tsx  BookStatus.tsx  Booklist.tsx  Color.tsx  Config.tsx  Graph.tsx  Register.tsx  Statistics.tsx
src/components/Analytics/: main.tsx  type.d.ts
src/components/Bookshelf/: main.tsx
src/hooks/: bookContextHook.tsx  pageContextHook.tsx
(+20 files in other folders)
