[package]
name = "back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
proconio = "0.4.5"
reqwest = "0.11.18"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "sqlite"] }
