[package]
name = "bookie_clicker_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chrono = "0.4.26"
proconio = "0.4.5"
reqwest = "0.11.18"
serde = "1.0.171"
serde_json = "1.0.99"
surrealdb = "1.0.0-beta.9"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
