[package]
name = "bookie_clicker"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = ["shell-open"] }
serde = "1.0.171"
serde_json = "1.0.99"
chrono = { version = "0.4.26", features = ["serde"] }
reqwest = "0.11.22"
tokio = { version = "1.32.0", features = ["full"] }
dirs = "5.0.1"
base64ct = { version = "1.6.0", features = ["alloc"] }
surrealdb = { version = "1.1.0", features = ["kv-mem"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
